results/SVCOMP/4-shot/log-BinaryTree-2024_03_18_07_36_37.txt
public class BinaryTree {
  /** Internal class representing a Node in the tree. */
  private class Node {
    int value;
    Node left;
    Node right;

    Node(int v, Node l, Node r) {
      value = v;
      left = l;
      right = r;
    }
  }

  private /*@ spec_public*/ Node root = null;

  /** 
   * Inserts a value in to the tree. 
   * 
   * @param v the value to be inserted
   */
  //@ ensures (\exists Node n; n != null; n.value == v) <==> (\forall Node n; n != null; n.value != v);
  public void insert(int v) {

    if (root == null) {
      root = new Node(v, null, null);
      return;
    }

    Node curr = root;
    while (true) {
      if (curr.value < v) {
        if (curr.right != null) {
          curr = curr.right;
        } else {
          curr.right = new Node(v, null, null);
          break;
        }
      } else if (curr.value > v) {
        if (curr.left != null) {
          curr = curr.left;
        } else {
          curr.left = new Node(v, null, null);
          break;
        }
      } else {
        break;
      }
    }
  }

  /** 
   * Searches for a value in the tree. 
   * 
   * @param v the value to search for
   * @return true if the value is found, false otherwise
   */
  //@ ensures \result == true <==> (\exists Node n; n != null; n.value == v);
  //@ ensures \result == false <==> (\forall Node n; n != null; n.value != v);
  public boolean search(int v) {
    Node curr = root;
    while (curr != null) { // N branches
      if (curr.value == v) { // N-1 branches
        return true;
      } else if (curr.value < v) { // N-1 branches
        curr = curr.right;
      } else {
        curr = curr.left;
      }
    }
    return false;
  }
}
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures (\exists Node n; n != null; n.value == v) <==> (\forall Node n; n != null; n.value != v);
                                           ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures (\exists Node n; n != null; n.value == v) <==> (\forall Node n; n != null; n.value != v);
                                                                                          ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:58: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n != null; n.value == v);
                                                                ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:59: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n != null; n.value != v);
                                                                 ^
4 errors

